<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_surname" />

    <EditText
        android:id="@+id/dobEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_birthdate" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone_number" />

    <Button
        android:id="@+id/saveProfileButton"
        android:layout_width="match_parent"
        android:backgroundTint="@color/aquamarine"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:text="@string/save_button" />
</LinearLayout>
