<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/idLogoView"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginTop="48dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/companyicon" />

    <EditText
        android:id="@+id/idEdtName"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_boarder"
        android:drawableStart="@drawable/name_icon"
        android:drawablePadding="6dp"
        android:hint="@string/enter_your_name"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/idLogoView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/idEdtSurname"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_boarder"
        android:drawableStart="@drawable/name_icon"
        android:drawablePadding="6dp"
        android:hint="@string/enter_your_surname"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/idEdtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/idEdtDob"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_boarder"
        android:drawableStart="@drawable/calendar_icon"
        android:drawablePadding="6dp"
        android:hint="@string/enter_your_birthdate"
        android:focusable="false"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/idEdtSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/idEdtPhone"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_boarder"
        android:drawableStart="@drawable/phone_icon"
        android:drawablePadding="6dp"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/idEdtDob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/idEdtEmail"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_boarder"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="6dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/idEdtPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/idEdtPassword"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_boarder"
        android:drawableStart="@drawable/password"
        android:drawablePadding="6dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/idCfmPassword"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_boarder"
        android:drawableStart="@drawable/password"
        android:drawablePadding="6dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/idEdtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/idBtnRegister"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/aquamarine"
        android:text="@string/registration_hyperlink"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/idCfmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/idRegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/idBtnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/idRegLink" />

    <TextView
        android:id="@+id/idRegLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/authorization_hyperlink"
        android:textColor="@color/aquamarine"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/idBtnRegister"
        app:layout_constraintStart_toEndOf="@id/idRegText"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
