<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/brandModelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Автомобиль"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/licensePlateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/enter_car_license_plate_number" />

    <TextView
        android:id="@+id/colorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/enter_car_color" />

    <TextView
        android:id="@+id/productionYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/enter_car_year_of_release" />
</LinearLayout>
