<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/idEdtEmail"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/edit_text_boarder"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="6dp"
        android:hint="@string/enter_your_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLogoView"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/idEdtPassword"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_below="@id/idEdtEmail"
        android:layout_marginTop="60dp"
        android:background="@drawable/edit_text_boarder"
        android:drawableStart="@drawable/password"
        android:drawablePadding="6dp"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEdtEmail"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <TextView
        android:id="@+id/idRegText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/idRegLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnLogin"

        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:layout_marginLeft="8dp"
        android:id="@+id/idRegLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_hyperlink"
        android:textColor="@color/aquamarine"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/idRegText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idBtnLogin" />



    <Button
        android:id="@+id/idBtnLogin"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:layout_below="@id/idEdtPassword"
        android:backgroundTint="@color/aquamarine"
        android:text="@string/login"
        android:textSize="16sp"
        android:textAlignment="center"
        android:drawableEnd="@drawable/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/idEdtPassword" />

    <ImageView
        android:id="@+id/idLogoView"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_marginTop="48dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/companyicon" />

</androidx.constraintlayout.widget.ConstraintLayout>
